fixed alignment issues

--- a/src/components/facilities/Facilities.css
+++ b/src/components/facilities/Facilities.css
@@ -103,8 +103,8 @@
 
   .facilities-list img {
     height: 300px;
-    width: 300px;
-    margin-left: -13%;
+    width: 400px;
+    /* margin-left: -13%; */
   }
 
   .facilities-title {
