--- a/src/components/hostingservices/HostingServices.css
+++ b/src/components/hostingservices/HostingServices.css
@@ -107,7 +107,7 @@
 
   .hosting-services-list img {
     height: 300px;
-    width: 300px;
+    width: 400px;
   }
 
   .hosting-services-title {
